# tmi

./: .gitignore  Makefile  README.md  stack.yaml  tm.cabal  tmi.cabal
src/: Main.hs  Parse.hs
