name:                tm
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/tm#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable tm
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:
            Parse
  build-depends:
            base >= 4.7 && < 5
          , containers == 0.5.6.2
          , QuickCheck == 2.8.1
          , megaparsec == 4.2.0
          , text == 1.2.2.0
