name:                tmi
version:             0.1.0.0
synopsis:            Turing Machine Interpreter
description:         Please see README.md
homepage:            http://github.com/githubuser/tmi#readme
license:             BSD3
license-file:        LICENSE
author:              Ethan Pailes
maintainer:          Ethan.Pailes@tufts.edu
copyright:           2015 Ethan Pailes
category:            Turing Machine
build-type:          Simple
cabal-version:       >=1.10

executable tmi
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:
            Parse
  build-depends:
            base >= 4.7 && < 5
          , containers == 0.5.6.2
          , QuickCheck == 2.8.1
          , megaparsec == 4.2.0
          , text == 1.2.2.0
